Bug 1224659 - Worker DataStore code should not use ErrorResult cross threads, r=bz